@@ -1,3 +1,9 @@
+2013-11-17  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/59123
+	* g++.dg/cpp0x/constexpr-redeclaration1.C: New.
+	* g++.dg/cpp0x/constexpr-decl.C: Adjust.
+
 2013-11-16  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/29143
